--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.11.4",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.1",
+    "redux-devtools-extension": "^2.13.9",
     "styled-components": "^5.3.1",
     "styled-normalize": "^8.0.7",
     "web-vitals": "^1.1.2"
