--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "react-thunk": "^1.0.0",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.1",
     "styled-normalize": "^8.0.7",
     "web-vitals": "^1.1.2"
