--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "i18next-http-backend": "^1.3.0",
     "i18next-xhr-backend": "^3.2.2",
     "json-server": "^0.16.3",
+    "lodash": "^4.17.21",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
